--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google AdSense Test</title>
     <script src="https://cdn.tailwindcss.com"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1941862507462448"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100 text-gray-900">
     <header class="bg-blue-600 text-white p-4 text-center text-xl font-bold">
@@ -21,6 +23,18 @@
             <div class="my-4 border border-gray-300 p-4 text-center">
                 <p class="text-sm text-gray-500">Google AdSense Ad Here</p>
                 <!-- Insert your AdSense ad code below -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1941862507462448"
+     crossorigin="anonymous"></script>
+<!-- banner -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1941862507462448"
+     data-ad-slot="9792702915"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
             </div>
         </section>
         
